[gd_scene load_steps=5 format=3 uid="uid://bvih3qrkyftcx"]

[ext_resource type="Script" path="res://torpedo.gd" id="1_c6150"]
[ext_resource type="Texture2D" uid="uid://ddcdo8on17lsg" path="res://torpedo.png" id="2_ffjn3"]
[ext_resource type="Script" path="res://area2D.gd" id="3_exeka"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ctrve"]
radius = 12.5

[node name="RigidBody2D" type="RigidBody2D"]
mass = 20.0
gravity_scale = 0.0
linear_damp_mode = 1
script = ExtResource("1_c6150")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
scale = Vector2(2, 2)
polygon = PackedVector2Array(-6, -1, -6, -2, -8, -2, -8, 2, -6, 2, -6, 1, -4, 2, 7, 2, 8, 1, 8, -1, 7, -2, -4, -2)

[node name="Sprite2D2" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_ffjn3")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 3
script = ExtResource("3_exeka")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(8, -1, 8, 1, 7, 2, 8, 2, 9, 1, 9, -1, 8, -2, 7, -2)

[node name="detectionRadii" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionRadii"]
scale = Vector2(2.15, 2.15)
shape = SubResource("CircleShape2D_ctrve")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="detectionRadii" to="." method="_on_detection_radii_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
